# MiniLang-Interpreter

./: .gitignore  CMakeLists.txt  Lexer.cpp  Lexer.h  README.md  main.cpp  testing.gulp
documentation/: .~lock.Transition.ods#  Transition.ods  image.tex
include/: MiniLangI.h
include/AST/: ASTNode.h
include/AST/ASTExpression/: ASTBinaryExprNode.h  ASTBooleanLiteral.h  ASTExprNode.h  ASTFunctionCall.h  ASTIdentifier.h  ASTIntegerLiteral.h  ASTLiteralNode.h  (+4 more)
include/Exceptions/: InterpreterError.h  LexerFailed.h  OperatorNotFound.h  SemanticAnalysisError.h  UnexpectedTokenWhileParsing.h
include/Lexer/: Classifier.h  Lexer.h  Token.h
include/Parser/: Parser.h
include/Visitors/: InterpreterExecution.h  Scope.h  ScopeForInterpreter.h  SemanticAnalysis.h  SymbolTable.h  Visitor.h  XMLConverterVisitor.h
src/: MiniLangI.cpp  main.cpp
src/AST/: ASTNode.cpp
src/Exceptions/: OperatorNotFound.cpp  OperatorNotFound.h  UnexpectedTokenWhileParsing.cpp
src/Lexer/: Classifier.cpp  Classifier.h  Lexer.cpp  Lexer.h  State.cpp  State.h  Token.cpp  Token.h
src/Parser/: ASTExprNode.cpp  ASTExprNode.h  ASTNode.cpp  ASTNode.h  ASTStatementNode.cpp  ASTStatementNode.h  Parser.cpp  Parser.h
src/Visitors/: Evaluation.cpp  InterpreterExecution.cpp  Scope.cpp  ScopeForInterpreter.cpp  SemanticAnalysis.cpp  SymbolTable.cpp  XMLConverterVisitor.cpp
tests/: Program1.gulp  Program1.xml  Program3.gulp  Program3.xml  Program4.gulp  Program4.xml  Program5.gulp  Program5.xml
tests-and-documentation/: Program2.gulp  Program2.xml  Program6.gulp  Program6.xml  TransitionTable.html
(+110 files in other folders)
